Complete order and small bugs
Added a html file for bundel as well as when the order is complete. I also fixed some issues with the footer being to long and the order now button being too small. Also fixed some minor issues witht he imags at some html pages

--- a/product_template/product_styles.css
+++ b/product_template/product_styles.css
@@ -57,7 +57,7 @@ h1 a:hover{
     background-size: cover;
     background-position: 0,0;
     width: 100%;
-    height: 60%;
+    height: 40%;
 }
 .info_sidebar{
     padding-right: 1.5%;
@@ -70,7 +70,7 @@ h1 a:hover{
     flex-direction: column;
 }
 .info_sidebar h1{
-    margin-top: 4%;
+    margin-top: 7%;
     margin-left: 7%;
     display: flex;
     align-items: flex-start;
@@ -84,16 +84,17 @@ h1 a:hover{
     margin-left: 7%;
     display: flex;
     align-items: flex-start;
+    flex-wrap: wrap;
     color: lightblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: initial;
     font-size: 13px;
 }
 .info_sidebar h2{
-    margin-top: 20%;
+    margin-top: 10%;
     background-color: #303E46;
     margin-left: 7%;
-    width: 30%;
+    width: 100px;
     padding: 5%;
     padding-left: 4.5%;
     border-radius: 10px;
@@ -145,7 +146,7 @@ h1 a:hover{
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 50%;
+    height: 40%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .info_bar{
@@ -158,7 +159,7 @@ h1 a:hover{
 }
 .info_bar h1{
     margin: 0%;
-    margin-top: 2%;
+    margin-top: 1%;
     margin-left: 3%;
     display: flex;
     align-items: flex-start;
@@ -236,33 +237,62 @@ h1 a:hover{
     height: 100%;
 
 }
-.product{
-    width: 80%;
-    height: 80%;
-    margin-top: 6%;
-    margin-bottom: 5%;
+.product_bundels{
+    width: 75%;
+    height: 78%;
+    margin-top: 2%;
     background-color: #EFEEEE;
     border-radius: 13px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.product img {
-    height: 88%;
-    width: 90%;
+
+.product_bundels img {
+    margin-top: 2%;
+    height: 70%;
+    width: 92%;
     border-radius: 4px;
+}
+.product_products{
+    width: 84%;
+    height: 84%;
+    margin-top: 2%;
+    margin-bottom: 1%;
+    background-color: #EFEEEE;
+    border-radius: 13px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.product_products img {
+    height: 92%;
+    width: 94%;
+    border-radius: 4px;
+}
+#more_products{
+    width: 92%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+#more_products img{
+    margin-top: 2%;
+    width: 20%;
 }
 #product_information_container{
     display: flex;
     justify-content: center;
-    height: 90%;
-    width: 90%;
+    height: 100%;
+    width: 100%;
+
 }
 
 .footer{
     background-color: #EFEEEE;
-    height: 20%;
+    height: 200px;
     width: 100%;
     display: flex;
     flex-direction: row;
