--- a/products/categories_styles.css
+++ b/products/categories_styles.css
@@ -92,7 +92,7 @@ h1 a:hover{
     margin-top: 20%;
     background-color: #303E46;
     margin-left: 7%;
-    width: 30%;
+    width: 100px;
     padding: 5%;
     padding-left: 4.5%;
     border-radius: 10px;
