--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ h1 a:hover{
     margin-top: 20%;
     background-color: #303E46;
     margin-left: 7%;
-    width: 30%;
+    width: 100px;
     padding: 5%;
     padding-left: 4.5%;
     border-radius: 10px;
@@ -156,7 +156,7 @@ h1 a:hover{
 }
 #categories_container #categories .categories_image img{
     width:100%;
-    height: 90;
+    height: 100%;
 }
 #categories_container #categories .categories_image img:hover{
     width:100%;
